--- a/www/css/media_screen.css
+++ b/www/css/media_screen.css
@@ -1,465 +1,274 @@
 
 @media only screen and (max-width: 800px) {
 
-.words
-{
-    font-size: 18px;
+.header1 {
+  position: relative;
+  height: 60px; }
 
-    padding-top: 20px;
-    padding-bottom: 30px;
 
-    text-align: center;
-    word-spacing: normal;
 
-    opacity: .8;
-}
-
-.image-col
-{
-    display:block;
-
-    margin-top: 0;
-    padding-left: 0px;
-
-    text-align: center;
-}
-
-.colum
-{
-    font-size: 25px;
-
-    display: block;
-
-    width: 30%;
-    padding-top: 40px;
-    padding-left: 0px;
-
-    text-align: left;
-
-    color: black;
-    /*border:  solid 5px black;*/
-}
-
-.any-photo,.any-photo1,.any-photo2,.any-photo3,.any-photo4,.any-photo5,.any-photo6,.any-photo7 {
-
-	display: inline-table;
-	padding-left: 0px;
-	padding-right: 0px;
-	width: 50%;
-	/*border: solid 1px red;*/
-	
-}
-
-.team
-{
-    display: block;
-
-    width: 100%;
-
-    text-align: center;
+.menu {
+  display: inline-block;
+  text-align: center;
+  padding-top: 10px; 
+  padding-left: 150px;
 }
 
 
-.el-team {
-
-    display: inline-block;
-    /*overflow: auto;*/
-
-    width: auto;
-    padding-right: 0px;
-    padding-left: 0px;
-
-    cursor: pointer;
-    text-align: center;
+.colum {
+  font-size: 25px;
+  display: inline-block;
+  width: 40%;
+  padding-top: 40px;
+  padding-left: 0px;
+  text-align: center;
+  color: black;
+  /*border:  solid 5px black; */
+}
+.any-photo, .any-photo1, .any-photo2, .any-photo3, .any-photo4, .any-photo5, .any-photo6, .any-photo7 {
+  display: inline-block;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 50%;
+  height: 50%;
+  /*border: solid 5px black; */
 }
 
-.feat-colum
-{
-    display: block;
+.any-sings {
+  display: inline-block;
+  width: 50%;
+  padding-top: 30px;
+  padding-right: 0px;
+  color: white;
+  font-size: 100%;
+  text-align: center; }
 
-    padding-top: 0px;
-    padding-bottom: 50px;
-
-    text-align: center;
-    word-spacing: 10px;
-}
-
-.colum
-{
-    font-size: 25px;
-
-    display: block;
-
-    width: 100%;
-    padding-top: 40px;
-    padding-left: 100;
-
-    text-align: center;
-
-    color: black;
-    /*border:  solid 5px black;*/
-}
-
-.text
-{
-    font-size: 15px;
-
-    display: inline-block;
-
-    padding-top: 0;
-    padding-bottom: 30px;
-    padding-left: 10px;
-
-    text-align: center;
-    word-spacing: 1px;
-}
-
-.user
-{
-    width: 280px;
-}
+  .user {
+  width: 135px; }
 
 
-.send-Message
-{
-    display: block;
-    width: auto;
-    padding-left: 310px;
-}
-
-.buttonMessage
-{
-    line-height: 60px;
-    width: 365px;
-    
-    height: 60px;
-}
-
-.icon-right
-{
-    display: block;
-    text-align: center;
-    padding-top: 0px;
-    padding-right: 0;
-    padding-left: 0;
-}
-
-.icon-blok {
-	text-align: center;
-	padding-right: 10px;
-    display: inline-block;
-    padding-top: 10px;
-    padding-bottom: 40px;
-}
-
-.text-left
-{
-    display: inline-table;
-
-    padding-top: 30px;
-    padding-bottom: 80px;
-    padding-left: 100px;
-
-    text-align: left;
-}
-
-.footer-left{
-	display: block;
-	width: 100%%;
-	text-align: left;
-	padding-top: 80px;
-	padding-left: 25px;
-	line-height:25px;
-}
-
-.subscribe{
-	display: block;
-	text-align: left;
-	padding-left: 25px;
-	width: 100%;
-}
-
-.explore{
-	display: block;
-	text-align: left;
-	padding-left: 25px;
-	padding-top: 30px;
-	width: 100%;
-
-}
-
-.support{
-
-	display: block;
-	width: 100%;
-	text-align: left;
-	padding-left: 25px;
-}
-
- 
-
-
-
+.buttonMessage {
+  line-height: 60px;
+  width: 370px;
+  height: 60px; }
 
 
 
 }
 
-@media only screen and (max-width: 400px) {
 
-.heade
-{
-	display: none;
+@media only screen and (max-width: 700px) {
+
+ #branly {
+  background-image: url("../image/bg.png"); 
+  height: 500px;
 }
 
-.words
-{
-    font-size: 17px;
-
-    padding-top: 20px;
-    padding-bottom: 30px;
-
-    text-align: center;
-    word-spacing: normal;
-
-    opacity: .8;
+.menu {
+  display: inline-block;
+  text-align: center;
+  padding-top: 10px; 
+  padding-left: 30px;
 }
 
-.feat-colum
-{
-    display: block;
-
-    padding-top: 0;
-    padding-bottom: 50px;
-
-    text-align: center;
-    word-spacing: 10px;
+.cont {
+  padding-top: 100px;
+  padding-bottom: 90px;
+  text-align: center;
+  color: white; 
 }
 
-
-.image-col
-{
-    display:block;
-
-    margin-top: 0;
-    padding-left: 0px;
-
-    text-align: center;
+#meet {
+  font-size: 60px;
+  display: inline; 
 }
 
-.colum
-{
-    font-size: 25px;
-
-    display: block;
-
-    width: 30%;
-    padding-top: 40px;
-    padding-left: 0px;
-
-    text-align: left;
-
-    color: black;
-    /*border:  solid 5px black;*/
+.team1 {
+  display: inline;
+  font-size: 60px;
+  font-weight: bold; 
 }
 
-.photo {
-	width: 100%;
-	display: block;
-	padding-top: 20px;
-}
+.creativ {
+  font-size: 50px;
 
-.any-photo,.any-photo1,.any-photo2,.any-photo3,.any-photo4,.any-photo5,.any-photo6,.any-photo7{
-
-	display: block;
-	padding-left: 0px;
-	padding-right: 0px;
-	width: 100%;
-	border: none;
-}
-   
-.menu{
-	display: none;
-	
-}
-
-#meet{
-
-	font-size: 40px;
-	display: inline;
-	
-}
-
-.team1{
-	display: inline;
-	font-size: 40px;
-	font-weight: bold;
-	
-	
-}
-
-.creativ{
-	font-size:25px;
-}
-
-.professionals{
-	font-size:15px;
-}
-
-.colum{
-
-	padding-top: 40px;
-	display: block;
-	text-align: center;
-	width: 100%;
-	padding-left: 0px;
-	padding-right: 0px;
-	font-size: 25px;
-	color: black;
-}
-
-.image-col{
-	display: inline;
-	text-align: left;
-	padding-left: 0px;
-	margin-top: 0px;
-	}
-
-.text
-	{
-	display: inline-block;
-	font-size: 15px;
-	text-align: left;
-	padding-top: 0px;
-	padding-bottom: 30px;
-	padding-left: 107px;
-	word-spacing: 1px;
-}
-
-.team
-{	text-align: center;
-	display: block;
-
-    width: 100%;
-
-}
-
-.el-team{
-	display: block;
-	width: 90%;
-	padding-right: 0px;
-	padding-left: 0px;
-}
-
-.el-team img{
-
-	/*width: auto;*/
-	height: 350px;
 }
 
 .any-sings{
-	
-	display: block;
-	width: 100%;
-	padding-top: 30px;
-	padding-right: 0px;
-	color: white;
-	font-size: 120%;
-	text-align: center;
-	
-	
+	font-size: 10px;
 }
 
-.photo {
-	width: 100%;
-	display: block;
-	padding-top: 20px;
-}
+.any-sings img{
 
-.any-photo{
+    width: 100px;
+    height: 100px;
+  }
 
-	display: block;
-	padding-left: 0px;
-	padding-right: 0px;
-	width: 100%;
-	border: none;
-}
-
-
-.text-left
-{
-    display: block;
-
-    padding-top: 30px;
-    padding-bottom: 50px;
-    padding-left: 22px;
-
-    text-align: left;
-}
-
-.user{
-	width: 130px;
-}
-
-.send-Message
-{
-    display: block;
-
-    padding-left: 150px;
-    padding-bottom: 20px;
-}
-
-.buttonMessage
-{
-    line-height: 60px;
-    width: 155px;
-    
-    height: 60px;
-}
-
-.icon-blok {
-    display: inline-block;
-    padding-top: 10px;
-}
-
-.footer-left{
-	display: block;
-	width: 100%%;
-	text-align: left;
-	padding-top: 80px;
-	padding-left: 25px;
-	line-height:25px;
-}
-
-.subscribe{
-	display: block;
-	text-align: left;
-	padding-left: 25px;
-	width: 100%;
-}
-
-.explore{
-	display: block;
-	text-align: left;
-	padding-left: 25px;
-	padding-top: 30px;
-	width: 100%;
+  .size-number{
+    font-size: 45px;
+  }
 
 }
 
-.support{
+ @media only screen and (max-width: 560px) {
 
-	display: block;
-	width: 100%;
-	text-align: left;
-	padding-left: 25px;
-	padding-top: 50px;
+ #branly {
+  background-image: url("../image/bg.png"); 
+  height: 300px;
 }
 
+ .menu {
+  display: none;
+   
+}
+
+.cont {
+  padding-top: 50px;
+  padding-bottom: 30px;
+  text-align: center;
+  color: white; 
+}
+
+#meet {
+  font-size: 40px;
+  display: inline; 
+}
+
+.team1 {
+  display: inline;
+  font-size: 40px;
+  font-weight: bold; 
+}
+
+.creativ {
+  font-size: 30px;
+
+}
+
+.professionals{
+  font-size: 12px;
+
+}
+
+
+.words {
+  font-size: 16px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  text-align: center;
+  word-spacing: normal;
+  opacity: .8; }
+
+.colum {
+  font-size: 20px;
+  display: inline-block;
+  width: 100%;
+  padding-top: 40px;
+  padding-left: 0px;
+  text-align: left;
+  color: black;
+  word-spacing: 0px;
+  /*border:  solid 5px black; */
+}
+
+.text {
+  font-size:20px;
+  display: inline-block;
+  padding-top: 0;
+  padding-bottom: 30px;
+  padding-left: 10px;
+  text-align: center;
+  word-spacing: 1px; }
+
+
+.any-photo, .any-photo1, .any-photo2, .any-photo3, .any-photo4, .any-photo5, .any-photo6, .any-photo7 {
+  display: inline-block;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 100%;
+  height: 100%;
+  /*border: solid 5px black; */
+}
+
+.el-team img{
  
+  width:50%;
+}
+
+   .user {
+  width: 450px; 
+}
 
 
+.buttonMessage {
+  line-height: 60px;
+  width: 450px;
+  height: 60px; }
 
+}
+
+
+@media only screen and (max-width: 400px) {
+
+
+#branly {
+  background-image: url("../image/header.bg.png"); 
+}
+
+.menu {
+  display: none;
+   
+}
+
+.colum {
+  font-size: 25px;
+  display: inline-block;
+  width: 50%;
+  padding-top: 40px;
+  padding-left: 0px;
+  text-align: center;
+  color: black;
+  /*border:  solid 5px black; */
+}
+
+.words {
+  font-size: 36px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  text-align: center;
+  word-spacing: normal;
+  opacity: .8; }
+
+
+  .any-photo, .any-photo1, .any-photo2, .any-photo3, .any-photo4, .any-photo5, .any-photo6, .any-photo7 {
+  display: inline-block;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 100%;
+  height: 100%;
+  /*border: solid 5px black; */
+}
+
+.any-sings {
+  display: block;
+  width: 100%;
+  padding-top: 30px;
+  padding-right: 0px;
+  color: white;
+  font-size: 100%;
+  text-align: center; }
+
+.user {
+  width: 100px; }
+
+
+.buttonMessage {
+  line-height: 60px;
+  width: 200px;
+  height: 60px; }
+
+
+}
 
 
 
